--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - run: echo "${GCLOUD_SERVICE_KEY}" > "${GOOGLE_APPLICATION_CREDENTIALS}"
       - run:
-          name: install python
+          name: install dependencies
           command: |
-            apk add -U bash python3
+            apk add -U bash gcc python3
             ln -s /usr/bin/python3 /usr/bin/python
       - checkout
       - run: terraform init
