--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            apk add -U bash gcc python3 python3-dev
+            apk add -U bash gcc musl-dev python3
             ln -s /usr/bin/python3 /usr/bin/python
       - checkout
       - run: terraform init
