--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  linter: thekevjames/linter@1
+  linter: thekevjames/linter@1.1
 
 jobs:
   lint:
@@ -15,6 +15,7 @@ jobs:
           name: install python
           command: |
             apk add -U bash python3
+            python3 -m ensurepip
             ln -s /usr/bin/python3 /usr/bin/python
       - checkout
       - run: terraform init
