chore(renovate): avoid pinning compatible terraforms

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,8 @@
 {
-  "extends":  ["github>thekevjames/tools:personal"]
+  "extends": ["github>thekevjames/tools:personal"],
+  "packageRules": [{
+    "matchManagers": ["terraform"],
+    "matchPackageNames": ["hashicorp/terraform"],
+    "rangeStrategy": "widen"
+  }]
 }
