--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 ci:
     autofix_commit_msg: 'refactor(lint): apply automatic lint fixes'
     autoupdate_commit_msg: 'chore(deps): bump pre-commit linter versions'
+    skip: [terraform_fmt, terraform_validate]
 
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
