--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,9 @@ ci:
     autoupdate_commit_msg: 'chore(deps): bump pre-commit linter versions'
     skip: [terraform_fmt, terraform_validate]
 
+default_language_version:
+    python: python3.11
+
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -32,9 +35,18 @@ repos:
     -   id: rst-directive-colons
     -   id: rst-inline-touching-normal
 
+# json
+- repo: https://github.com/python-jsonschema/check-jsonschema
+  rev: 0.23.2
+  hooks:
+    - id: check-github-workflows
+    - id: check-renovate
+      additional_dependencies:
+      - pyjson5
+
 # terraform
 -   repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.79.1
+    rev: v1.81.0
     hooks:
     -   id: terraform_fmt
     -   id: terraform_validate
