fix(ci): fixup workflow job references

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,10 @@ workflows:
             branches:
               ignore: master
           requires:
-            - lint
+            - linter/pre-commit
       - terraform-apply:
           filters:
             branches:
               only: master
           requires:
-            - lint
+            - linter/pre-commit
