--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -193,13 +193,12 @@ repos:
         - pyjson5
 
 # docker
-# TODO: fixme (build issues)
-#   - repo: https://github.com/AleksaC/hadolint-py
-#     rev: v2.12.0.3
-#     hooks:
-#       - id: hadolint
-#         args:
-#           - --ignore=DL3025
+  - repo: https://github.com/AleksaC/hadolint-py
+    rev: v2.12.1-beta
+    hooks:
+      - id: hadolint
+        args:
+          - --ignore=DL3025
 
 # java
   - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
