--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,5 +6,10 @@
       "matchPackageNames": ["hashicorp/terraform"],
       "rangeStrategy": "widen",
     },
+    {
+      // See .circleci/config.yml:linter/pre-commit
+      "matchDepPatterns": ["^python$", "^python/cpython$"],
+      "allowedVersions": ">=3.11,<3.12",
+    },
   ],
 }
